Test/linarith.expected
Test/linarith.lean:34:9: warning: unused variable `e`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:53:0: warning: declaration uses 'sorry'
Test/linarith.lean:101:9: warning: unused variable `a`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:101:13: warning: unused variable `c`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:106:9: warning: unused variable `a`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:106:13: warning: unused variable `c`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:118:60: warning: unused variable `h3`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:125:9: warning: unused variable `a`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:125:13: warning: unused variable `c`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:146:2: error: [arithPolyNorm]: could not prove x - y = -x + y
Test/linarith.lean:168:34: warning: unused variable `z`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:169:5: warning: unused variable `h5`
note: this linter can be disabled with `set_option linter.unusedVariables false`
